--- a/MultiSearch.Tests/MultiSearch.Tests.csproj
+++ b/MultiSearch.Tests/MultiSearch.Tests.csproj
@@ -7,17 +7,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="nunit" Version="3.11.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MultiSearch.DataAccess\MultiSearch.DataAccess.csproj" />
     <ProjectReference Include="..\MultiSearch.Domain\MultiSearch.Domain.csproj" />
     <ProjectReference Include="..\MultiSearch.Engines\BingSerach\BingSearch.csproj" />
     <ProjectReference Include="..\MultiSearch.Engines\GoogleSearch\GoogleSearch.csproj" />
     <ProjectReference Include="..\MultiSearch.Engines\YandexSearch\YandexSearch.csproj" />
-    <ProjectReference Include="..\MultiSearchEngine\MultiSearchEngine.csproj" />
   </ItemGroup>
 
 </Project>
