MultiEngine decorator. Total renaming. Migrations. Due to Yandex Api requests & IP limitation provided alternative html versions of search engines.

--- a/MultiSearch.Engines/BingEngine/BingEngine.csproj
+++ b/MultiSearch.Engines/BingEngine/BingEngine.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <RootNamespace>SearchEngines</RootNamespace>
+    <RootNamespace>MultiSearch.Engines</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.17" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
