--- a/MultiSearch.Web/appsettings.json
+++ b/MultiSearch.Web/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "EnginesApiSettings": {
+    "GoogleKey": "GOOGLE API KEY",
+    "GoogleSearchEngineId": "GOOGLE SERACH ENGINE ID",
+    "BingKey": "BING API KEY",
+    "YandexUser": "YANDEX USERNAME",
+    "YandexKey": "YANDEX API KEY"
+  },
+  "ConnectionStrings": {
+    "i": null,
+    "MultiSearchDB": "Server=(localdb)\\mssqllocaldb; Database=MultiSearchDB; Integrated Security = true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
