--- a/MultiSearch.Tests/MultiSearch.Tests.csproj
+++ b/MultiSearch.Tests/MultiSearch.Tests.csproj
@@ -7,19 +7,32 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="YandexResponse.xml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
     <PackageReference Include="Moq" Version="4.13.1" />
-    <PackageReference Include="nunit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="nunit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MultiSearch.DataAccess\MultiSearch.DataAccess.csproj" />
     <ProjectReference Include="..\MultiSearch.Domain\MultiSearch.Domain.csproj" />
-    <ProjectReference Include="..\MultiSearch.Engines\BingSerach\BingSearch.csproj" />
-    <ProjectReference Include="..\MultiSearch.Engines\GoogleSearch\GoogleSearch.csproj" />
-    <ProjectReference Include="..\MultiSearch.Engines\YandexSearch\YandexSearch.csproj" />
+    <ProjectReference Include="..\MultiSearch.Engines\BingEngine\BingEngine.csproj" />
+    <ProjectReference Include="..\MultiSearch.Engines\GoogleEngine\GoogleEngine.csproj" />
+    <ProjectReference Include="..\MultiSearch.Engines\MultiEngine\MultiEngine.csproj" />
+    <ProjectReference Include="..\MultiSearch.Engines\YandexEngine\YandexEngine.csproj" />
+    <ProjectReference Include="..\MultiSearch.Web\MultiSearch.Web.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="testsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
