--- a/MultiSearch.Web/appsettings.json
+++ b/MultiSearch.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "EnginesApiSettings": {
     "GoogleKey": "GOOGLE API KEY",
-    "GoogleSearchEngineId": "GOOGLE SERACH ENGINE ID",
+    "GoogleSearchEngineId": "GOOGLE SEARCH ENGINE ID",
     "BingKey": "BING API KEY",
     "YandexUser": "YANDEX USERNAME",
     "YandexKey": "YANDEX API KEY"
