--- a/MultiSearch.Engines/BingEngine/BingEngine.csproj
+++ b/MultiSearch.Engines/BingEngine/BingEngine.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>MultiSearch.Engines</RootNamespace>
+    <LangVersion>8</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
