All IO calls were replaced by async. Uri via builders

--- a/MultiSearch.Engines/BingEngine/BingEngine.csproj
+++ b/MultiSearch.Engines/BingEngine/BingEngine.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>MultiSearch.Engines</RootNamespace>
-    <LangVersion>8</LangVersion>
+    <LangVersion>default</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
